# py_pcrjjc_notify

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pcr_watch.py  pcr_watch_ids.json  pyproject.toml  requirements.txt
app/: notify.py  notifyer.py  verifier.py  verify.py  watch.py  watcher.py
game/: bilibili.py  interface.py  pcr.py  utils.py
sdk/: bsgamesdk.py  pcrclient.py  rsacr.py
